@@ -1,6 +1,7 @@
 2004-04-29  Ben Elliston  <bje@au.ibm.com>
 
-	* ppc-opc.c (powerpc_opcodes): Add "dbczl" instruction for PPC970.
+	* ppc-opc.c (XCMPL): Renmame to XOPL. Update users.
+	(powerpc_opcodes): Add "dbczl" instruction for PPC970.
 
 2004-04-22  Kaz Kojima  <kkojima@rr.iij4u.or.jp>
 
